alb/files/ingress.yaml
# k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: project
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-clusterip
              port:
                number: 80
